# odometries

./: Cargo.toml  README.md  rust-toolchain.toml
example/: fake_imu.rs  livox.rs  mid360.rs
examples/: fake_imu.rs  fake_points.rs  livox.rs
odometries-macros/: Cargo.toml
odometries-macros/src/: add_assign_vector.rs  attr_configs.rs  kf_state.rs  lib.rs  matrix_ty.rs  sub_state_of.rs  unbiased.rs  utils.rs
src/: algorithm.rs  context.rs  eskf.rs  frame.rs  lib.rs  systems.rs  uncertain.rs  utils.rs  voxel_map.rs
src/algorithm/: kilo.rs  lio.rs
src/algorithm/kilo/: estimate.rs  state.rs
src/algorithm/lio/: config.rs  downsample.rs  estimate.rs  measurement.rs  predict.rs  state.rs
src/algorithm/lio/measurement/: imu.rs  point_chunk.rs  points.rs
src/algorithm/lio/measurement/imu/: init.rs
src/eskf/: covariance.rs  observe.rs  state.rs  uncertain.rs
src/eskf/observe/: model.rs
src/eskf/observe/model/: default.rs  no_model.rs  transposed.rs
src/eskf/state/: common.rs  correlation.rs  sensitivity.rs
src/eskf/state/common/: marker.rs
src/frame/: frames.rs
src/systems/: fast_lio.rs  fast_livo.rs  kilo.rs
src/systems/kilo/: estimate.rs  state.rs
src/systems/kilo/state/: kinematic.rs
src/utils/: macros.rs
src/voxel_map/: index.rs  oct_tree.rs  residual.rs  uncertain.rs
src/voxel_map/oct_tree/: branch.rs  iter.rs  leaf.rs  storage.rs
src/voxel_map/uncertain/: body_point.rs  plane.rs  residual.rs  world_point.rs
