[package]
name = "odometries"
version = "0.1.0"
edition.workspace = true
authors = ["ZXY595 <3303057136@qq.com>"]
description = "A library for tightly‑coupled error‑state Kalman filter based odometry systems"
keywords = ["SLAM", "kalman", "navigation", "odometry", "robot", "voxelmap"]
license = "MIT"
repository = "https://github.com/ZXY595/odometries"

[workspace]
resolver = "3"
members = ["odometries-macros"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
nalgebra = "0.34"
num-traits = "0.2"
odometries-macros = { path = "./odometries-macros" }
simba = "0.9"

[[example]]
name = "mid360"
path = "example/mid360.rs"

[dependencies]
itertools = "0.14"
nalgebra.workspace = true
nohash-hasher = "0.2"
num-traits.workspace = true
odometries-macros.workspace = true
rayon = { version = "1.11", optional = true }
simba.workspace = true
slab = "0.4"

[dev-dependencies]
livox2 = { version = "0.2.2", features = ["async-net", "simd"] }
# rerun = "0.27.2"
smol = "2.0"

[features]
# rayon = [] # planning to add rayon support
# no-std = [] # planning
