[package]
name = "odometries-macros"
version = "0.1.0"
edition.workspace = true

[lib]
proc-macro = true
test = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing", "proc-macro", "clone-impls"] }
itertools = "0.14"
heck = "0.5"
