[package]
name = "odometries-macros"
version = "0.1.0"
edition.workspace = true

[lib]
proc-macro = true
test = false

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
  "clone-impls",
  "derive",
  "parsing",
  "printing",
  "proc-macro"
] }
